Header: Ensure opaque background for stuff to slide behind on mobile

--- a/src/styles/layout/_header.sass
+++ b/src/styles/layout/_header.sass
@@ -325,6 +325,7 @@
     width: 100%
     margin-bottom: $mobile-header-margin
     transition: padding $transition-fast, transform $transition-fast
+    background-color: $panel-or-overlay
 
     .is--headerless &
       transform: translateY(-1 * $inner-header-height);
